[package]
name = "load-test-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "load_test_rs"
path = "src/lib.rs"

[[bin]]
name = "load-test-rs"
path = "src/main.rs"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
threadpool = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
